--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 		"picqer/php-barcode-generator": "^0.3.0",
 		"league/flysystem": "^1.0",
 		"firebase/php-jwt": "^5.0",
-		"twilio/sdk": "^6.1",
+		"twilio/sdk": "*",
 		"nordsoftware/lumen-cors": "^3.5",
 		"http-interop/http-factory-guzzle": "^1.2"
 	},
