--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,19 @@
 		"mercadopago/sdk": "0.5.2",
 		"crabbly/fpdf-laravel": "1.0.2",
 		"pusher/pusher-php-server": "^3.4.1",
-		"authy/php": "^3.0",
 		"phpoffice/phpspreadsheet": "^1.6",
 		"picqer/php-barcode-generator": "^0.3.0",
 		"league/flysystem": "^1.0",
 		"firebase/php-jwt": "^5.0",
 		"twilio/sdk": "*",
 		"nordsoftware/lumen-cors": "^3.5",
-		"http-interop/http-factory-guzzle": "^1.2"
+		"http-interop/http-factory-guzzle": "^1.2",
+		"ext-json": "*",
+		"ext-iconv": "*",
+		"ext-dom": "*",
+		"ext-curl": "*",
+		"ext-simplexml": "*",
+		"ext-libxml": "*",
 	},
 	"require-dev": {
 		"fzaninotto/faker": "~1.4",
