--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"guzzlehttp/psr7": "^1.4",
 		"nategood/httpful": "*",
 		"mercadopago/sdk": "0.5.2",
-		"crabbly/fpdf-laravel": "1.0.2",
+		"crabbly/fpdf-laravel": "^1.0",
 		"pusher/pusher-php-server": "^3.4.1",
 		"authy/php": "^3.0",
 		"phpoffice/phpspreadsheet": "^1.6",
